reworking for segments.ai
Former-commit-id: c3e2a1e771b5c607aeb12c9c5abfcf207b302c90

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,7 @@ tensorflow-estimator = { version = "*", optional = true}
 tensorboard = { version = "*", optional = true }
 tensorflow-io = { version = "*", optional = true }
 tensorflow-datasets = { version = "*", optional = true }
+segments-ai = { version = "^0.12", optional = true }
 
 # jax = { version = "*", optional = true }
 # jaxlib = { version = "*", optional = true }
@@ -124,6 +125,7 @@ docs = [
 ml = [
     "tensorflow", "tensorflow-estimator", "tensorboard", "tensorflow-io",
     "tensorflow-datasets",
+    "segments-ai"
     # "jax", "jaxlib", "flax"
 ]
 
