add rst for pseudonymisation and reference it, but not able to get module member pseudonymisation_dispatch to appear. updated pyproject.toml to use streamlit 0.65.1 in attempt to force pylint issue with streamlit. includes update to poetry.lock

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,7 +80,7 @@ segments-ai = { version = "^0.12", optional = true }
 # flax = { git = "https://github.com/google/flax", optional = true }
 
 # gui
-streamlit = "*"
+streamlit = "^0.65.1"
 timeago = "*"
 
 # docs
