--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,10 @@ pymssql = { version = "< 3.0.0", python = "< 3.8" }
 python_dateutil = "*"
 scikit-image = "*"
 
+# gui
+streamlit = "0.64.0"
+timeago = "*"
+
 # ml
 tensorflow = { version = ">=2.2.0", optional = true}
 tensorflow-estimator = { version = "*", optional = true}
@@ -78,10 +82,6 @@ segments-ai = { version = "^0.12", optional = true }
 # jax = { version = "*", optional = true }
 # jaxlib = { version = "*", optional = true }
 # flax = { git = "https://github.com/google/flax", optional = true }
-
-# gui
-streamlit = "*"
-timeago = "*"
 
 # docs
 sphinx = { version = ">= 1.4, < 1.8", optional = true }
