add type hint to FileDataset

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -253,6 +253,8 @@
     "prependpath",
     "proto",
     "pseudonymisation",
+    "pseudonymise",
+    "pseudonymised",
     "psutil",
     "pval",
     "pyargs",
