--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,7 @@ hypothesis  = { version = "*", optional = true }
 psutil  = { version = "*", optional = true }
 pylint  = { version = "*", optional = true }
 pytest-pylint  = { version = "*", optional = true }
+cffi = "1.14.0"
 
 [tool.poetry.dev-dependencies]
 # Git Management
