make pymedphys cache not download all, and be separate for each run
Former-commit-id: b6f86e0f91d9cad63f8c7bb3ea40fec9ec008fc5

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -235,12 +235,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ${{ steps.pymedphys-cache-location.outputs.dir }}
-        key: pymedphys-${{ hashFiles('**/hashes.json') }}
-
-    - name: Download all PyMedPhys data for a consistent cache
-      if: steps.pymedphys-cache.outputs.cache-hit != 'true'
-      run: |
-        poetry run python -c "from pymedphys._data import download; download.download_all()"
+        key: pymedphys-${{ matrix.task }}-${{ runner.os }}-${{ hashFiles('**/hashes.json') }}
 
 
 # TESTS
