set pymedphys._imports to a known third_party
Former-commit-id: ca4f0df2a539c5e9765e253d8a53734719c56892

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -136,6 +136,9 @@ force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
 
+known_third_party = [
+    "pymedphys._imports"
+]
 known_general_scientific = [
     "numpy", "scipy", "pandas", "imageio", "PIL", "skimage", "matplotlib",
     "mpl_toolkits", "shapely"
