make sure beta and experimental can import without deps
Former-commit-id: f879fa2747581f0611469bbcbb4bf7ba1f4892e4

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -143,6 +143,8 @@ jobs:
       run: |
         pymedphys --help
         python -c "import pymedphys"
+        python -c "import pymedphys.beta"
+        python -c "import pymedphys.experimental"
 
 # Set up Poetry
 
