--- a/.pylintrc
+++ b/.pylintrc
@@ -21,7 +21,8 @@ disable =
     ungrouped-imports,
     import-outside-toplevel,
     no-else-return,
-    unbalanced-tuple-unpacking
+    unbalanced-tuple-unpacking,
+    raise-missing-from
 
 
 [FORMAT]
