update docs to refer to the new extras method
Former-commit-id: ef5f57b491169291f21fd9e61448921d7403c2b5

--- a/netlify.toml
+++ b/netlify.toml
@@ -12,7 +12,7 @@
   command = """
 pip install poetry &&
 poetry config virtualenvs.in-project true &&
-poetry install -vvv --no-dev -E docs &&
+poetry install -vvv -E user -E docs &&
 poetry run pymedphys dev docs
 """
 
