--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,13 +58,16 @@
     "PDD",
     "PDDs",
     "PDFs",
+    "Phillip",
     "Popen",
     "Procida's",
     "RDONLY",
     "Rafael",
+    "Rembish",
     "Riverina",
     "Selectbox",
     "Sobolewski",
+    "Swerdloff",
     "Thicknesses",
     "UTHSCSA",
     "Xprt",
