begin work on wlutz gui

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -188,6 +188,7 @@
     "isfile",
     "isfunction",
     "isinf",
+    "islice",
     "isnan",
     "isort",
     "isroutine",
@@ -309,6 +310,7 @@
     "sqrd",
     "stabilising",
     "stackoverflow",
+    "stat",
     "streamlit",
     "strftime",
     "strptime",
