--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ authors = [
     "Matthew Cooper <mcooper@pymedphys.com>",
     "Phillip Chlap",
     "Jacob McAloney",
-    "Pedro Martinez"
+    "Pedro Martinez",
+    "Stuart Swerdloff"
 ]
 license = "Apache-2.0"
 homepage = "https://pymedphys.com"
@@ -50,6 +51,8 @@ imageio = {version = "*", optional = true}  # groups = ["user", "dev"]
 shapely = {version = ">= 1.7.0", optional = true}  # groups = ["user", "dev"]
 
 dbfread = {version = "*", optional = true}  # groups = ["user", "dev"]
+
+immutables = {version = "^0.14", optional = true}  # groups = ["user", "dev", "dicom"]
 
 pydicom = {version = ">=2.0.0", optional = true}  # groups = ["user", "dev", "dicom"]
 pynetdicom = {version = "*", optional = true}  # groups = ["user", "dev", "dicom"]
