--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.6"
 dataclasses = {version = "*", python = "~3.6.0"}
-
+immutables = {version = "^0.14"}
 # library
 tqdm = {version = "*", optional = true}  # groups = ["user", "dev"]
 attrs = {version = "*", optional = true}  # groups = ["user", "dev"]
@@ -51,8 +51,6 @@ imageio = {version = "*", optional = true}  # groups = ["user", "dev"]
 shapely = {version = ">= 1.7.0", optional = true}  # groups = ["user", "dev"]
 
 dbfread = {version = "*", optional = true}  # groups = ["user", "dev"]
-
-immutables = {version = "^0.14", optional = true}  # groups = ["user", "dev", "dicom"]
 
 pydicom = {version = ">=2.0.0", optional = true}  # groups = ["user", "dev", "dicom"]
 pynetdicom = {version = "*", optional = true}  # groups = ["user", "dev", "dicom"]
