--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.6"
 dataclasses = {version = "*", python = "~3.6.0"}
-immutables = {version = "^0.14"}
+
 # library
 tqdm = {version = "*", optional = true}  # groups = ["user", "dev"]
 attrs = {version = "*", optional = true}  # groups = ["user", "dev"]
@@ -55,6 +55,7 @@ dbfread = {version = "*", optional = true}  # groups = ["user", "dev"]
 pydicom = {version = ">=2.0.0", optional = true}  # groups = ["user", "dev", "dicom"]
 pynetdicom = {version = "*", optional = true}  # groups = ["user", "dev", "dicom"]
 pylibjpeg-libjpeg = {version = "*", optional = true}  # groups = ["user", "dev", "dicom"]
+immutables = {version = "*", optional = true}  # groups = ["user", "dev", "dicom"]
 
 cython = {version = "*", optional = true}  # groups = ["user", "dev"]
 pymssql = {version = "< 3.0.0", python = "< 3.8", optional = true}  # groups = ["user", "dev"]
