add stuart to wheel authors
Former-commit-id: 22fd1ec2bf434523f7ce7199f35da47231a0cca7

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,10 @@ authors = [
     "PyMedPhys Contributors <developers@pymedphys.com>",
     "Simon Biggs <sbiggs@pymedphys.com>",
     "Matthew Jennings <mjennings@pymedphys.com>",
+    "Stuart Swerdloff",
+    "Phillip Chlap",
     "Jake Rembish",
     "Matthew Cooper <mcooper@pymedphys.com>",
-    "Phillip Chlap",
     "Jacob McAloney",
     "Pedro Martinez"
 ]
