make on-updates test re-install the environment appropriately

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -212,17 +212,18 @@ jobs:
 ## Install Machine Learning Dependencies
 
     - name: Install a machine learning environment
-      if: matrix.os == 'ubuntu' && ( matrix.task == 'tests' || matrix.task == 'updates' )
+      if: matrix.os == 'ubuntu' && matrix.task == 'tests'
       run: |
         poetry install -E user -E ml
 
 ## Update all packages and then install with tests environment
 
-    - name: Update all packages then install with tests environment
+    - name: Update all packages then install with tests, user and ml environment
       if: matrix.task == 'updates'
       run: |
-        poetry install -E user -E tests
+        poetry install -E user -E tests -E ml
         poetry update
+        poetry install -E user -E tests -E ml
 
 # Download all data for consistent cache
 
