skip the flakey test within experimental
Former-commit-id: aacaa524512428a94c32d0a7b6ef534c1dc640ac

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,7 @@
     "IREAD",
     "IWRITE",
     "IXUSR",
+    "Interpolator",
     "Jupyter",
     "Linac",
     "Lutz",
@@ -107,6 +108,7 @@
     "clabel",
     "cmap",
     "codemirror",
+    "color",
     "colorbar",
     "conda",
     "contourf",
@@ -156,6 +158,7 @@
     "fileeditor",
     "findbb",
     "finditer",
+    "flakey",
     "fliplr",
     "flipud",
     "fluence",
