install pandoc in on-updates workflow
Former-commit-id: d98a472b42fede3ba7d6783040132113e40ee42e

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -173,7 +173,7 @@ jobs:
         brew install freetds
 
     - name: Install Pandoc on Ubuntu
-      if: matrix.task == 'docs' && matrix.os == 'ubuntu'
+      if: ( matrix.task == 'docs' || matrix.task == 'updates' ) && matrix.os == 'ubuntu'
       run: |
         sudo apt-get install -y pandoc
 
