--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ python_dateutil = {version = "*", optional = true}  # groups = ["user", "dev", "
 scikit-image = {version = "*", optional = true}  # groups = ["user", "dev", "experimental"]
 
 # gui
-streamlit = "0.69.2"  # groups = ["user", "dev", "gui"]
+streamlit = {version = "0.65.2", optional = true}  # groups = ["user", "dev", "gui"]
 timeago = {version = "*", optional = true}  # groups = ["user", "dev", "gui"]
 
 # ml
