separate out cypress CI

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -59,17 +59,21 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu', 'macos', 'windows']
-        task: ['tests', 'docs', 'stackoverflow', 'updates']
+        task: ['tests', 'docs', 'stackoverflow', 'updates', 'cypress']
         exclude:
           - os: 'windows'
             task: 'stackoverflow'
           - os: 'windows'
             task: 'updates'
+          - os: 'windows'
+            task: 'cypress'
 
           - os: 'macos'
             task: 'stackoverflow'
           - os: 'macos'
             task: 'updates'
+          - os: 'macos'
+            task: 'cypress'
 
         include:
           - os: 'ubuntu'
@@ -205,7 +209,7 @@ jobs:
 ## Install with Tests Environment
 
     - name: Install a tests environment
-      if: matrix.task == 'tests'
+      if: matrix.task == 'tests' || matrix.task == 'cypress'
       run: |
         poetry install -E user -E tests
 
@@ -287,14 +291,15 @@ jobs:
 ## Cypress
 
     - uses: actions/setup-node@v1
-      if: matrix.os == 'ubuntu' && matrix.task == 'tests'
+      if: matrix.task == 'cypress'
 
     - name: Initially run Cypress tests only locally, without dashboard integration
-      if: matrix.os == 'ubuntu' && matrix.task == 'tests'
+      if: matrix.task == 'cypress'
       run: |
         poetry run pymedphys dev tests -v -s --run-only-yarn
 
     - uses: actions/upload-artifact@v2
+      if: matrix.task == 'cypress'
       with:
         name: cypress-videos
         path: pymedphys/tests/e2e/cypress/videos
