make pip not ask for confirmation
Former-commit-id: 6b70bf7c3734f2e105aaef6852e99176101d4838

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -150,7 +150,7 @@ jobs:
     - name: Remove base install of pymedphys
       if: matrix.task == 'tests'
       run: |
-        pip uninstall pymedphys
+        pip uninstall -y pymedphys
 
 # Set up Poetry
 
