force nbconvert back to 6.0.6

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,7 +80,7 @@ nbsphinx  = {version = "*", optional = true}  # groups = ["dev", "docs"]
 jupyter_client = {version = "*", optional = true}  # groups = ["dev", "docs"]
 ipython = {version = "*", optional = true}  # groups = ["dev", "docs"]
 ipykernel = {version = "*", optional = true}  # groups = ["dev", "docs"]
-nbconvert = {version = "*", optional = true}  # groups = ["dev", "docs"]
+nbconvert = {version = "6.0.6", optional = true}  # groups = ["dev", "docs"]
 
 # tests
 pytest = {version = "*", optional = true}  # groups = ["dev", "tests"]
