--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -115,10 +115,18 @@ jobs:
       run: |
         pip install --upgrade pip setuptools
 
-    - name: Install Poetry
+    - name: Install Poetry on *Nix
+      if: matrix.os != 'windows'
       uses: dschep/install-poetry-action@v1.3
       with:
         version: 1.1.4
+        create_virtualenvs: true
+
+    - name: Install Poetry on Windows
+      if: matrix.os == 'windows'
+      uses: dschep/install-poetry-action@v1.3
+      with:
+        version: 1.0.9
         create_virtualenvs: true
 
 # No import and run CLI with no dependencies
