--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -324,6 +324,8 @@
     "strptime",
     "struct",
     "subpackage",
+    "subprocess",
+    "subprocesses",
     "superoinferior",
     "tabmanager",
     "tensorflow",
