add version propagation
Former-commit-id: 35da97bbd2bbea0cc129009d98e59645f2935096

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -288,6 +288,7 @@
     "pypi",
     "pyplot",
     "pypoetry",
+    "pyproject",
     "pytest",
     "qcls",
     "quickcheck",
@@ -330,6 +331,7 @@
     "tfrecord",
     "toctree",
     "tolist",
+    "tomlkit",
     "tomo",
     "toplevel",
     "toxenv",
